Design tweaks - freshwater image, hide legend and return text on smaller screens, fix overflow on taxon info panel

--- a/docs/css/imerss-scrolly.css
+++ b/docs/css/imerss-scrolly.css
@@ -153,7 +153,8 @@ h2 {
 }
 
 .section-button.disabled {
-    stroke: #ccc;
+    display: none;
+    /* stroke: #ccc; */
 }
 
 .section-button-desc {
